# TrafficApi

./: .gitignore  README.md  pyproject.toml
tests/: test_trafficapi.py
trafficapi/: config_example.py  db.py  get_api.py  utils.py
