[tool.poetry]
name = "TrafficApi"
version = "0.1.0"
description = ""
authors = ["Kevin_laptop <kevin820606@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = {version = "^21.9b0", allow-prereleases = true}
types-requests = "^2.25.11"
types-PyMySQL = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
